--- a/server/templates/map.html
+++ b/server/templates/map.html
@@ -28,8 +28,9 @@
 <body>
     <div id="navbar"></div>
 
-    <div style="display: flex; justify-content: space-around; height: 10vh;">
-        <div style="width: 20vw;">
+<div style="display: flex; height: 90vh; width: 95vw; justify-content: space-between;">
+    <div id="buttons" style="width: 20%;">
+        <div style="width: 95%;">
             <label for="base-select">Mapa base:</label>
             <select name="base-select" id="base-select"></select>
         </div>
@@ -47,7 +48,9 @@
         <button onclick="updateBtnClick()">Atualizar Mapa</button>
     </div>
 
-    <div id="map-container" style="height: 80vh;"></div>
+    <div id="map-container" style="height: 80vh; width: 70%;"></div>
+</div>
+
     <script>
         let scriptRoot = {{ request.script_root|tojson }};
         
@@ -75,18 +78,20 @@
             let arrowValues = arrowKeeper.values;
 
             var polygonGeojson = await fetchGeojson(scriptRoot, "/polygon-geojson", [polygonValue]);
-            console.log(arrowValues.length)
+
+            let pointGeojson;
+            let arrowGeojson;
+
             if ( pointValues.length > 0) {
-    
-                let pointGeojson = await fetchGeojson(scriptRoot, "/point-geojson", pointValues);
-            } else if (pointValues.length === 0){
-                let pointGeojson = {"type": "FeatureCollection", "features": []};
+                pointGeojson = await fetchGeojson(scriptRoot, "/point-geojson", pointValues);
+            } else {
+                pointGeojson = {"type": "FeatureCollection", "features": []};
             }
             
             if (arrowValues.length > 0) {
-                let arrowGeojson = await fetchGeojson(scriptRoot, "/arrow-geojson", arrowValues);
-            } else if (arrowValues.length === 0){
-                let arrowGeojson = {"type": "FeatureCollection", "features": []};
+                arrowGeojson = await fetchGeojson(scriptRoot, "/arrow-geojson", arrowValues);
+            } else {
+                arrowGeojson = {"type": "FeatureCollection", "features": []};
             }
         
 
