--- a/server/templates/map.html
+++ b/server/templates/map.html
@@ -31,7 +31,7 @@
 <div style="display: flex; height: 90vh; width: 95vw; justify-content: space-between;">
     <div id="buttons" style="width: 20%;">
         <div style="width: 95%;">
-            <label for="base-select">Mapa base:</label>
+            <label for="base-select">Matéria-prima:</label>
             <select style="width: 95%;" name="base-select" id="base-select"></select>
         </div>
 
