add navbar (fonte dados)

--- a/main/templates/map.html
+++ b/main/templates/map.html
@@ -29,7 +29,10 @@
 
 </head>
 <body>
-    <div id="navbar"></div>
+    <div id="navbar">
+        <a href="{{url_for('home')}}">Home</a>
+        <a href="{{url_for('data_sources')}}">Fonte Dados</a>
+    </div>
 
 <div style="display: flex; height: 90vh; width: 95vw; justify-content: space-between;">
     <div id="buttons" style="width: 25%; height: 100vh;">
