--- a/main/static/css/general_style.css
+++ b/main/static/css/general_style.css
@@ -2,6 +2,31 @@ body {
     font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
+#navbar {
+    background-color: #05015c;
+    display: flex;
+    justify-content: space-around;
+    overflow: hidden;
+    font-family: Arial, sans-serif;
+    border-radius: 5px 5px 0px 0;
+}
+
+#navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+#navbar a:hover {
+    background-color: #ddd;
+    color: #05015c;
+}
+
+
 #buttons {
     background-color: #f4f4f4;
     padding: 10px;
