cor processo p tag

--- a/main/templates/map.html
+++ b/main/templates/map.html
@@ -54,7 +54,7 @@
         <button id="update-map-btn" onclick="updateBtnClick()">Atualizar Mapa</button>
         <br>
         <img src="{{url_for('static', filename='images/logo_fapesp.png')}}" style="height: 10%; margin:10px"/>
-        <p>Processo 2023/05420-0</p>
+        <p style="color: #05015c">Processo 2023/05420-0</p>
     </div>
 
     <div id="map-container" style="height: 80vh; width: 70%;"></div>
