--- a/server/static/css/general_style.css
+++ b/server/static/css/general_style.css
@@ -3,7 +3,7 @@ body {
 }
 
 #navbar {
-    background-color: #05015c;
+    background-color: #ff8c34;
     display: flex;
     justify-content: space-around;
     overflow: hidden;
@@ -23,7 +23,7 @@ body {
 
 #navbar a:hover {
     background-color: #ddd;
-    color: #05015c;
+    color: #ff8c34;
 }
 
 
@@ -45,7 +45,7 @@ body {
 }
 
 #update-map-btn {
-    background-color: #05376c;
+    background-color: #ff8c34;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -55,7 +55,7 @@ body {
 }
 
 #update-map-btn:hover {
-    background-color: #031d3a;
+    background-color: #fb6d00;
 }
 
 #map-container {
